Navbar fixed. Used z-index:1 to put in the foreground

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -155,6 +155,7 @@ label {
     letter-spacing: 1px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .btn-outline-primary:hover {
